<resources>
    <string name="app_name">Participation9Menus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_email">Email</string>
    <string name="action_sms">Sms</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="nav_add">Add</string>
    <string name="nav_delete">Delete</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_text">Text</string>
    <string name="nav_email">Email</string>

</resources>
